--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,21 +1,23 @@
 body::-webkit-scrollbar {
-  display: none; /* Hides the scrollbar */
+  display: none;
+  /* Hides the scrollbar */
 }
 
-
+.flash-message {
+  z-index: 300;
+}
 
 .carousel-container {
-    z-index: 0;
-    margin-top: 10px;
-    width: 100%;
-    max-width: 100%;
-    overflow: hidden;
-    position: relative;
-  }
-  
-  nav {
-    z-index: 200;
-  }
+  z-index: 0;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+nav {
+  z-index: 200;
+}
 
 
 .main-container {
@@ -24,89 +26,94 @@ body::-webkit-scrollbar {
 }
 
 
-  .carousel-track {
-    display: flex;
-    will-change: transform;
-    /* transition: transform 0.8s ; */
-    transition-duration: 1s; 
-    /* transform: translate3d(-1676.79px, 0px, 0px);  */
-    transition-delay: 0ms;
-    transition-duration: 800ms; 
-    transform: translate3d(-2794.64px, 0px, 0px);
-    transition-behavior: auto;
-    animation-timing-function: linear;
-  }
-
-  .carousel-item {
-    min-width: 33.3333%;
-    padding: 7px;
-  }
-
-  .carousel-item img {
-    width: 100%;
-    pointer-events: none;
-  }
-
-  .dots {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    text-align: center;
-    align-items: center;
-  }
-  
-  .dot {
-    width: 5px;
-    height: 5px;
-    background: #aaa;
-    border-radius: 50%;
-    margin: 0 4px;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .dot.active {
-      text-align: center;
-    width: 10px;
-    height: 10px;
-    background: #0787ff;
-    transition: all 0.3s ease-in-out;
-  }
-
-  .carousel-track {
-    user-select: none;
-    -webkit-user-drag: none;
-  }
-  
-
-
-
-  /* footer corousel */
-  .carousel-container {
-    overflow: hidden;
-    padding: 60px 0;
-    white-space: nowrap;
-    position: relative;
+.carousel-track {
+  display: flex;
+  will-change: transform;
+  /* transition: transform 0.8s ; */
+  transition-duration: 1s;
+  /* transform: translate3d(-1676.79px, 0px, 0px);  */
+  transition-delay: 0ms;
+  transition-duration: 800ms;
+  transform: translate3d(-2794.64px, 0px, 0px);
+  transition-behavior: auto;
+  animation-timing-function: linear;
 }
+
+.carousel-item {
+  min-width: 33.3333%;
+  padding: 7px;
+}
+
+.carousel-item img {
+  width: 100%;
+  pointer-events: none;
+}
+
+.dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  text-align: center;
+  align-items: center;
+}
+
+.dot {
+  width: 5px;
+  height: 5px;
+  background: #aaa;
+  border-radius: 50%;
+  margin: 0 4px;
+  transition: all 0.3s ease-in-out;
+}
+
+.dot.active {
+  text-align: center;
+  width: 10px;
+  height: 10px;
+  background: #0787ff;
+  transition: all 0.3s ease-in-out;
+}
+
+.carousel-track {
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
+
+
+
+/* footer corousel */
+.carousel-container {
+  overflow: hidden;
+  padding: 10px 0;
+  white-space: nowrap;
+  position: relative;
+}
+
 .carousel {
-    display: flex;
-    gap: 20px;
-    animation: scroll 120s linear infinite;
+  display: flex;
+  gap: 20px;
+  animation: scroll 120s linear infinite;
 }
+
 .carousel img {
-   height: 100px;
+  height: 100px;
 }
+
 @keyframes scroll {
-    from {
-        transform: translateX(0);
-    }
-    to {
-        transform: translateX(-100%);
-    }
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-100%);
+  }
 }
+
 /* Duplicate the content for the seamless effect */
 .carousel-wrapper {
-    display: flex;
-    width: max-content;
+  display: flex;
+  width: max-content;
 }
 
 
@@ -133,10 +140,12 @@ body::-webkit-scrollbar {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0); /* Initially transparent */
+  background: rgba(0, 0, 0, 0);
+  /* Initially transparent */
   transition: all 0.3s ease-in-out;
 }
 
 .product-img-wrapper:hover::before {
-  background: rgba(0, 0, 0, 0.5); /* Dark fade effect */
+  background: rgba(0, 0, 0, 0.5);
+  /* Dark fade effect */
 }
