--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,14 +1,15 @@
 <%- include('./partials/header') %>
-<% if (user.cart.length > 0) { %> 
+
+<% if (user.cart.length > 0) { %>
     <% user.cart.forEach(function(item) { %>
-        <% if (item.name) { %> 
+        <% if (item.productname) { %>
             <div class="w-full h-screen flex items-start px-20 py-20 gap-10">
                 <div class="w-[30%] rounded-md overflow-hidden">
                     <div class="w-full h-80 bg-[<%= item.bgcolor %>] flex justify-center items-center">
-                        <img class="h-[20rem]" src="data:image/jpeg;base64, <%= item.image.toString('base64') %>" alt="">
+                        <img class="h-[20rem]" src="data:image/jpeg;base64,<%= item.image.toString('base64') %>" alt="">
                     </div>
                     <div class="w-full flex justify-between px-5 py-4 bg-[<%= item.panelcolor %>]">
-                        <h3 class="text-2xl"><%= item.name %></h3>
+                        <h3 class="text-2xl"><%= item.productname %></h3>
                         <div class="flex items-center gap-2">
                             <i class="w-7 h-7 bg-white flex rounded-full items-center justify-center ri-add-line"></i>
                             <div class="px-2 py-1 rounded-md bg-white text-black"><%= item.length %></div>
@@ -53,4 +54,5 @@
 <% } else { %>
     <h2 class="text-center text-xl mt-10">Empty cart</h2>
 <% } %>
+
 <%- include('./partials/footer') %>
