--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -30,6 +30,7 @@
                 </div>
                 <div class="w-[75%] flex flex-col gap-5 h-screen">
                     <div class="flex items-start gap-5">
+                        <% if(products) { %>
                         <% products.forEach((product)=> { %>
                             <div class="w-60">
                                 <div class="w-full h-52 flex items-center justify-center bg-[<%= product.bgcolor %>]">
@@ -58,6 +59,7 @@
                                 </div>
                             </div>
                             <% }); %>
+                            <% }; %>
                     </div>
                 </div>
             </div>
