--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -94,8 +94,8 @@
 
 
 <script src="/javascripts/script.js"> </script>
-<!-- <script src="/javascripts/flash.js"> </script>
-<script src="/javascripts/eyetoggle.js"> </script> -->
+<script src="/javascripts/flash.js"> </script>
+<script src="/javascripts/eyetoggle.js"> </script>
 
 </body>
 
